@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: winFCmd.test,v 1.29 2004/05/25 18:46:53 kennykb Exp $
+# RCS: @(#) $Id: winFCmd.test,v 1.30 2004/06/18 15:59:18 kennykb Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -1022,15 +1022,30 @@ test winFCmd-16.11 {Windows file normalization} {pcOnly cdrom} {
     # Must not crash
     set result "no crash"
 } {no crash}
-test winFCmd-16.12 {Windows file normalization} {pcOnly} {
-    set oldhome ""
-    catch {set oldhome $::env(HOME)}
-    set ::env(HOME) ${d}:
-    cd
-    set result [pwd]; # <- Must not crash
-    set ::env(HOME) $oldhome
-    set result
-} ${d}:/
+
+test winFCmd-16.12 {Windows file normalization} \
+    -constraints pconly \
+    -setup {
+	set oldwd [pwd]
+	set oldhome ""
+	catch {set oldhome $::env(HOME)}
+    } \
+    -body {
+	set expectedResult [file normalize ${d}:]
+	set ::env(HOME) ${d}:
+	cd
+	set result [pwd]; # <- Must not crash
+	if { [string equal $result $expectedResult] } {
+	    concat ok
+	} else {
+	    list $result != $expectedResult
+	}
+    } \
+    -cleanup {
+	set ::env(HOME) $oldhome
+	cd $oldwd
+    } \
+    -result ok
 
 cd $pwd
 unset d dd pwd
@@ -1066,3 +1081,7 @@ unset d dd pwd
 cleanup
 ::tcltest::cleanupTests
 return
+
+# Local Variables:
+# mode: tcl
+# End:
